--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-dev-typescript",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "TypeScript support for NativeScript projects. Install using `tns install typescript`.",
   "scripts": {
     "test": "exit 0",
@@ -22,8 +22,7 @@
   },
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-ts": "^5.1.0",
-    "mkdirp": "^0.5.1",
-    "typescript": "^1.5.3"
+    "grunt-ts": "*",
+    "nativescript-hook": "^0.1.0"
   }
 }
