--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-dev-typescript",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "TypeScript support for NativeScript projects. Install using `tns install typescript`.",
   "scripts": {
     "test": "exit 0",
@@ -21,8 +21,8 @@
     "url": "https://github.com/NativeScript/nativescript-dev-typescript.git"
   },
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-ts": "*",
+    "grunt": ">=0.4.5",
+    "grunt-ts": ">=5.1.0",
     "nativescript-hook": "^0.1.0"
   }
 }
