--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-dev-typescript",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "TypeScript support for NativeScript projects. Install using `tns install typescript`.",
   "scripts": {
     "test": "exit 0",
@@ -11,7 +11,13 @@
     "hooks": [
       {
         "type": "before-prepare",
-        "script": "lib/before-prepare.js"
+        "script": "lib/before-prepare.js",
+        "inject": true
+      },
+      {
+        "type": "before-watch",
+        "script": "lib/watch.js",
+        "inject": true
       }
     ]
   },
@@ -21,8 +27,9 @@
     "url": "https://github.com/NativeScript/nativescript-dev-typescript.git"
   },
   "dependencies": {
-    "grunt": ">=0.4.5",
-    "grunt-ts": ">=5.1.0",
+    "gaze": "^0.5.2",
+    "glob": "^5.0.15",
+    "lodash": "^3.10.1",
     "nativescript-hook": "^0.2.0"
   }
 }
