Implement after-watch hook
Used for stopping the `$ tsc --watch` process

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
         "type": "before-watch",
         "script": "lib/watch.js",
         "inject": true
+      },
+      {
+        "type": "after-watch",
+        "script": "lib/after-watch.js",
+        "inject": true
       }
     ]
   },
