Preserve watch output
TypeScript clears console output from version 2.7.1. `tns debug` command prints debug URL on console after that typescript clears the output. So the debug command cannot be used.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "url": "https://github.com/NativeScript/nativescript-dev-typescript.git"
   },
   "dependencies": {
-    "nativescript-hook": "^0.2.0"
+    "nativescript-hook": "^0.2.0",
+    "semver": "5.5.0"
   }
 }
