--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
         "type": "after-watch",
         "script": "lib/after-watch.js",
         "inject": true
+      },
+      {
+        "type": "before-preview-sync",
+        "script": "lib/before-prepare.js",
+        "inject": true
       }
     ]
   },
