fix: install `typescript` as a dependency instead of slowing down the app creation by installing it on `post install` (and install the same typescript version as the one required by our angular deps)

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "nativescript-hook": "^0.2.0",
-    "semver": "5.5.0"
+    "semver": "5.5.0",
+    "typescript": "~3.1.1"
   }
 }
